--- a/_posts/2016-12-4-sum-java.md
+++ b/_posts/2016-12-4-sum-java.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "利用结构体调用系统时间"
+title: "java猜拳游戏"
 date: 2016-12-4 20:14
-description: "利用结构体调用系统时间"
+description: "java猜拳游戏"
 tag: java
 ---
 
