--- a/_posts/2018-6-21-Windows.md
+++ b/_posts/2018-6-21-Windows.md
@@ -6,4 +6,4 @@ description: "免费获取Windows10正版系统"
 tag: Windows
 ---
 
-[]()、[MySQL数据库](https://dev.mysql.com/downloads/installer/)、
+今天教大家如何获取Windows10免激活正版系统  首先准备工具如下 一个已经激活的Windows7/XP系统    [Windows10升级助手](https://www.microsoft.com/zh-cn/software-download/windows10?OCID=WIP_r_Win10_Body_AddPC)
