--- a/_posts/2018-6-21-Windows.md
+++ b/_posts/2018-6-21-Windows.md
@@ -9,5 +9,9 @@ tag: Windows
 今天教大家如何获取Windows10免激活正版系统  首先准备工具如下 一个已经激活的Windows7系统    [Windows10升级助手](https://www.microsoft.com/zh-cn/software-download/windows10?OCID=WIP_r_Win10_Body_AddPC)下载升级工具 并打开升级软件
 如图：
 <div align="center">
-<img src="/images/image/0000.png" height="716" width="561"/>
+<img src="/images/image/0000.png" height="500" width="561"/>
+</div>
+点击接受后如下图：
+<div align="center">
+<img src="/images/image/0001.png" height="716" width="561"/>
 </div>
