--- a/_posts/2018-6-21-Windows.md
+++ b/_posts/2018-6-21-Windows.md
@@ -15,3 +15,4 @@ tag: Windows
 <div align="center">
 <img src="/images/image/0001.png" height="500" width="561"/>
 </div>
+此处可直接默认设置，直接点击下一步 随后升级软件会通过微软服务器来下载Windows10系统并进行系统的升级  下载及安装过程中可能会有几次重启或者黑屏  这是正常现象 请不要惊讶或者将电脑断电等一系列动作 以免在安装过程中出现不必要的问题 
